# practice

./: .gitignore  10.c++  11.c++  12.c++  14.c++  15.c++  16.c++  17.c++  18.c++  19.c++  21.c++  219.c++  22.c++  23.c++  24.c++  25.c++  27.c++  28.c++  29.c++  3-10.c++  3-3.c++  3-5.c++  3-7.c++  30.c++  31.c++  32.c++  320.c++  33.c++  4.c++  5.c++  6.c++  7.c++  8.c++  8_queens.c++  9.c++  Gradebook.h  Mid_To_for.c++  Pa_final.c++  Parentheses Balance.cpp  Poker_card.cpp  (+33 more)
2dEngine/: PhysicsWorld.cpp  PhysicsWorld.h  README.md  RigidBody.cpp  RigidBody.h  Vector2D.cpp  Vector2D.h
ASTEROIDS/: .gitignore  Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  Game.cpp  Game.h  GameObject.h  Makefile  Player.cpp  Player.h  asteroids
Algorithm/HW0/: E94126054.py  FYI plotMortgages.py
Apath/: CMakeLists.txt  Game.cpp  Game.h  Pathfinding.h  README.md  main.cpp
CPE/: .gitignore  Parentheses_balance.cpp  Word_Scramble.cpp  pb
CSIE_WINDOW/HW1/: Product.h  README.md  Shop.cpp  Shop.h  main.cpp
CSIE_WINDOW/HW2/: Game.cpp  Game.h  Player.h  Stock.h  main.cpp
HW/1/CO_StudentID_HW1/: 1  array_search.c  (+1 more)
My_Vector/: CMakeLists.txt  MyVector.h  MyVector.tpp  main.cpp
Project/Beginner/: CMakeLists.txt  main.cpp
SFML_Snake/: Config.h  Food.cpp  Food.h  Game.cpp  Game.h  Makefile  README.md  Snake.cpp  Snake.h  snake
generic_db/: Database.cpp  Database.h  Student.cpp  Student.h
matrix_library/: .gitignore  Matrix.h  main.cpp
verilog/: check_keypad.v  clk_div_10_sec.v  divider_to_10000Hz.v  divider_to_100Hz.v  dot_matrix.v  labsec_count.v  pixel_generation.v  top.v  vga.v
(+8 files in other folders)
